# my-website

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: index-BRpmSESx.js  index-CBDVhR5H.css
docs/: ai-learning-platform.md  architecture-overview.md  backend-api.md  database-schema.md  frontend-routing.md
openspec/: config.yaml
openspec/changes/personal-site-v1/: design.md  tasks.md
openspec/specs/admin-panel/: spec.md
openspec/specs/ai-tutoring/: spec.md
openspec/specs/course-management/: spec.md
openspec/specs/frontend-routing/: spec.md
openspec/specs/learning-progress/: spec.md
openspec/specs/monorepo-structure/: spec.md
openspec/specs/user-auth/: spec.md
server/: pyproject.toml
server/app/: config.py  main.py
server/app/middleware/: auth.py
server/app/models/: __init__.py  chat_message.py  course.py  enrollment.py  lesson.py  progress.py  user.py
server/app/routers/: admin.py  ai.py  auth.py  courses.py  progress.py
server/app/schemas/: auth.py  chat.py  course.py  progress.py
server/app/services/: ai_service.py
server/app/utils/: security.py
server/migrations/: env.py
server/migrations/versions/: 7064a0ff3408_initial_schema.py
src/: App.tsx  index.css
src/data/: about.ts  projects.ts
src/hooks/: useAuth.tsx  useChat.ts  useParticles.ts  useTheme.tsx
src/layouts/: AdminLayout.tsx  AppLayout.tsx  SiteLayout.tsx
src/pages/: HomePage.tsx  LoginPage.tsx  NotFound.tsx  RegisterPage.tsx
src/services/: admin.ts  api.ts  auth.ts  courses.ts
src/types/: index.ts
(+40 files in other folders)
